    - Added a performance mode setting that disables certain performance-intensive features
    - Added a hotkey to go up a floor in a subfactory (SHIFT+R by default)
  Changes:
    - Improved performance of the calculation model
    - Made the localisation more compatible with other mods. Everything had to be moved around, so translation mods will have to do a bit of work to be compatible again. If you're having trouble, join the Discord and I'll try to help.
  Bugfixes:
    - Fixed a calculation error regarding productivity on certain types of recipes
    - Fixed the 'Machine rounding precision' setting not working correctly
    - Fixed that the current beacon wasn't being selected when editing
    - Fixed SI-unit localisations not actually being shown
    - Made time-shorthands (s, m, h) properly localisable

---------------------------------------------------------------------------------------------------
Version: 0.17.64
Date: 12. 11. 2019
  Bugfixes:
    - Fixed a crash caused by the most recent update

---------------------------------------------------------------------------------------------------
Version: 0.17.63
Date: 12. 11. 2019
  Changes:
    - Slightly improved calculation performance by using new API capabilities
  Bugfixes:
    - Improved compatibility with PyVeganism
    - Fixed the main interface refreshing unnecessarily sometimes
    - Fixed the horrible performance of the 'Floor Total'-mode

---------------------------------------------------------------------------------------------------
Version: 0.17.62
Date: 04. 11. 2019
  Changes:
    - Made the 'Tutorial Mode'-tooltips a bit more consistent
    - Made units like Watt or Joule localisable

---------------------------------------------------------------------------------------------------
Version: 0.17.61
Date: 24. 10. 2019
  Features:
    - Added pollution calculation (shown in the tooltip of the energy consumption of every recipe line)
  Changes: