@@ -317,8 +317,8 @@ tut_tl_byproduct=Shift-left-click: Move right\nControl-left-click: Move left
 tut_recipe=Left-click: Open subfloor\nRight-click: Delete\nShift-left-click: Move down\nControl-left-click: Move up
 tut_machine=Left-click: Change\nRight-click: Set limit\nShift-left-click: Upgrade\nControl-left-click: Downgrade
 tut_module=Left-click: Edit\nRight-click: Delete\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add module\nControl-alt-left-click: Remove module
-tut_beacon_module=Left/right-click: Edit\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add module\nControl-alt-left-click: Remove module
-tut_beacon_beacon=Left/right-click: Edit\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add beacon\nControl-alt-left-click: Remove beacon
+tut_beacon_module=Left-click: Edit\nRight-click: Delete\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add module\nControl-alt-left-click: Remove module
+tut_beacon_beacon=Left-click: Edit\nRight-click: Delete\nShift-left-click: Upgrade tier\nControl-left-click: Downgrade tier\nShift-alt-left-click: Add beacon\nControl-alt-left-click: Remove beacon
 tut_product=Left-click: Prioritize\nShift-left-click: Move right\nControl-left-click: Move left
 tut_byproduct=Shift-left-click: Move right\nControl-left-click: Move left
 tut_ingredient=Left-click: Add recipe\nShift-left-click: Move right\nControl-left-click: Move left
